--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="icon" href="http://archives.indenial.com:8000/clipart/clipart/transBG/tigger_dancingT.jpg">
+    <title>Andrew Hamm</title>
+    <style>
+      html {
+        font-family: helvetica;
+      }
+      h1 {
+        font-size: 75px;
+      }
+      body {
+        text-align: center;
+      }
+      .logo {
+        width: 300px;
+        height: auto;
+        margin-bottom: 50px;
+      }
+      .red {
+        color: red;
+      }
+      .green {
+        color: green;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Under Construction</h1>
+    <img class="logo" src="logo.jpg"/>
+    <br>
+    <img class="santa" src="santa.gif"/>
+    <h1>
+      Coming
+      <span class="red">C</span><span class="green">h</span><span class="red">r</span><span class="green">i</span><span class="red">s</span><span class="green">t</span><span class="red">m</span><span class="green">a</span><span class="red">s</span>
+      <span class="green">2</span><span class="red">0</span><span class="green">0</span><span class="red">2</span><span class="green">!</span>
+    </h1>
+  </body>
+</html>
