--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   </head>
   <body>
     <h1>Under Construction</h1>
-    <img class="logo" src="logo.jpg"/>
+    <img class="logo" src="images/logo.jpg"/>
     <br>
-    <img class="santa" src="santa.gif"/>
+    <img class="santa" src="images/santa.gif"/>
     <h1>
       Coming
       <span class="red">C</span><span class="green">h</span><span class="red">r</span><span class="green">i</span><span class="red">s</span><span class="green">t</span><span class="red">m</span><span class="green">a</span><span class="red">s</span>
